# source_map_gen

./: Cargo.toml  LICENSE  README.md  index.html  rustfmt.toml  time_estimates.txt  todo.txt  vmf_help.txt
scripts/: example.rhai
src/: generation.rs  lib.rs  main.rs  map.rs  utils.rs  vmf.rs
src/generation/: generation.rs  mod.rs  region.rs  shape.rs
src/generation/region/: mod.rs  room.rs
src/generation2/: disp.rs  mod.rs  shape.rs
src/generation2/shape/: old.rs  tests.rs
src/light/: colorspaces.rs  mod.rs  time.rs
src/light/colorspace/: cie.rs  mod.rs
src/map/: entity.rs  mod.rs  solid.rs  texture.rs  vector.rs
src/map2/: entity2.rs  mod.rs
src/pallet/: mod.rs  pallet_lib.rs  vpk.rs
src/scripting/: mod.rs
src/source/: entity.rs  mod.rs
src/vmf/: mod.rs  vmf_impl.rs
test/: single_block.vmf  truth.vpk
test/truth/folder1/: folder1_file1.txt
test/truth/folder1/folder2/: folder2_file2.txt
