[package]
name = "proc_gen2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_ops = { path = "../derive_ops" }
vmf_parser_nom = { path = "../vmf_parser_nom" }
# vmf_parser_nom = "0.1"

indextree = "4.5"
rand_chacha = "0.3"
# colorspaces:
rgb = "0.8"
# time:
spa = "0.3"
chrono = "0.4.24"

# rhai = { version = "1.12", features = ["only_i32"] }
# rhai = { version = "1.12", features = ["only_i32", "no_closure"] }
# rhai = { version = "1.12", features = ["only_i32", "no_closure", "no_custom_syntax"] }
# rhai = { version = "1.12", features = ["only_i32", "no_closure", "no_custom_syntax", "no_time", "unchecked", "no_module"] }
# rhai = { version = "1.12", features = ["sync", "only_i32", "no_closure", "no_custom_syntax", "no_time", "unchecked", "no_module"] }

# rhai = { version = "1.12", features = ["sync", "only_i32", "no_custom_syntax"] } # latest
# rhai = "1.12"

# kiss3d = "0.35"
# console_error_panic_hook = "0.1"

[dev-dependencies]
approx = "0.5"
